objects/Revenue_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Amount_for_total_deferral__c</fullName>
        <label>Amount for total deferral</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CVII__c</fullName>
        <formula>Opportunity__r.CVII_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CVII</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Opportunity__r.ContractEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Opportunity__r.ContractStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <formula>Opportunity__r.Contract_Number_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferred_Revenue_Scheduled_in_Future__c</fullName>
        <label>Deferred Revenue Scheduled in Future</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <formula>TEXT(Opportunity__r.Deal_Booked_In__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_up_date_Recognition_Date__c</fullName>
        <label>Follow up date/Recognition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Revenue Tracker</relationshipLabel>
        <relationshipName>Revenue_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opt_OutType__c</fullName>
        <formula>TEXT(Opportunity__r.Opt_out_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opt OutType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Date__c</fullName>
        <formula>Opportunity__r.OptOutDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opt Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overage_Contract__c</fullName>
        <label>Overage/Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Overage</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>Opportunity__r.Product_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Text(Opportunity__r.Product__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-standard language (like special pricing clause)</fullName>
                </value>
                <value>
                    <fullName>Integration/Configuration Acceptance</fullName>
                </value>
                <value>
                    <fullName>New product adoption issues (cancellation of show case contract)</fullName>
                </value>
                <value>
                    <fullName>Payment uncertainty</fullName>
                </value>
                <value>
                    <fullName>Legal Opt Outs</fullName>
                </value>
                <value>
                    <fullName>Others (Enter the reason in text box)</fullName>
                </value>
                <value>
                    <fullName>Contract Implementation Issue</fullName>
                </value>
                <value>
                    <fullName>Various Contingency Clauses</fullName>
                    <isActive>false</isActive>
                    <label>Various Contingency Clauses</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_true_up_or_not__c</fullName>
        <label>Revenue true up or not</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue true up</fullName>
                </value>
                <value>
                    <fullName>Rev Rec. start from object close date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Close_Date__c</fullName>
        <label>Status Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Revenue Tracker</label>
    <nameField>
        <displayFormat>RT-{0000}</displayFormat>
        <label>Revenue Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>